# adan-Hi3861-smart-home-kit

./: .gitignore  BUILD.gn  README.md  gcc_riscv32编译链解读  readme
adc_key/: BUILD.gn  README.md  adc_key.c
car_mqtt/: BUILD.gn  README.md  car_test.c  car_test.h  mqtt_test.c  mqtt_test.h  sta_entry.c  udp_test.c
car_test/: BUILD.gn  README.md  ap_entry.c  car_test.c  car_test.h  sta_entry.c  udp_test.c
demo_link/: BUILD.gn  helloworld.c
demo_myparty/: BUILD.gn  README.md  myparty_demo.c
demo_pwm/: BUILD.gn  demo_pwm.c
demo_wifi_sta/: BUILD.gn  demo_wifi_sta.c
iot_hardware/: BUILD.gn  led_example.c
key_demo/: key_demo.c
led_demo/: BUILD.gn  led_demo.c
led_light_control/: BUILD.gn  README.md  adc_demo.c
my_first_app/: BUILD.gn  hello_world.c
samgr/: BUILD.gn  bootstrap_example.c  broadcast_example.c  example.h  feature_example.c  maintenance_example.c  service_example.c  service_recovery_example.c  specified_task_example.c  task_example.c
security/: BUILD.gn  README.md
security/environment/: BUILD.gn  aht20.c  aht20.h  config_params.h  environment_demo.c  oled_fonts.h  oled_ssd1306.c  oled_ssd1306.h  oled_test.c
security/udpserver_env/: BUILD.gn  cjson.c  demo_entry_cmsis.c  net_common.h  net_demo.h  net_params.h  udp_server_test.c  wifi_connecter.c  wifi_connecter.h  wifi_starter.c  wifi_starter.h
ssd1306/: BUILD.gn  README.md  img2code.py
ssd1306/examples/: BUILD.gn  ssd1306_demo.c  ssd1306_tests.c  ssd1306_tests.h
ssd1306/libm_port/: BUILD.gn  __cos.c  __rem_pio2.c  __rem_pio2_large.c  __sin.c  cos.c  libm.h  sin.c
ssd1306/ssd1306/: BUILD.gn  ssd1306.c  ssd1306.h  ssd1306_conf.h  ssd1306_fonts.c  ssd1306_fonts.h
startup/: BUILD.gn
test_mqtt/: BUILD.gn  README.md  mqtt_entry.c  mqtt_test.c  mqtt_test.h
test_onenet/: BUILD.gn  onenet_entry.c  onenet_test.c  onenet_test.h
