
static_library("net_demo") {
	config_file = [
		"./libudpserverstart.a"
	]

	copy("config") {
		sources = config_file
		outputs = [ "//out/hispark_pegasus/wifiiot_hispark_pegasus/libs/{{source_file_part}}" ]
	}
	sources = ["udp_server_test.c"]

	sources += ["demo_entry_cmsis.c", "wifi_connecter.c", "cjson.c", "wifi_starter.c"]
	include_dirs = [
		"../environment",
		"//utils/native/lite/include",
		"//kernel/liteos_m/kal/cmsis",
		"//base/iot_hardware/peripheral/interfaces/kits",
		"//foundation/communication/wifi_lite/interfaces/wifiservice",
		"//third_party/cJSON"
	]
}
