
static_library("oled_test") {
	sources = [
		"ssd1306_demo.c",
		"ssd1306_tests.c",
	]

	include_dirs = [
		"../ssd1306",
		"//utils/native/lite/include",
		"//kernel/liteos_m/components/cmsis/2.0",
		"//base/iot_hardware/peripheral/interfaces/kits",
		"//device/soc/hisilicon/hi3861v100/hi3861_adapter/hals/communication/wifi_lite/wifiservice",
		"//device/soc/hisilicon/hi3861v100/hi3861_adapter/kal",
	]
}


